Added Settings tab and removed UID button in login page

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -26,8 +26,8 @@
     </item>
 
     <item
-        android:id="@+id/ic_android"
-        android:icon="@drawable/ic_android"
+        android:id="@+id/ic_setting"
+        android:icon="@drawable/ic_setting"
         android:title="">
     </item>
 </menu>
