--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -20,8 +20,8 @@
     </item>
 
     <item
-        android:id="@+id/ic_alert"
-        android:icon="@drawable/ic_alert"
+        android:id="@+id/ic_profile"
+        android:icon="@drawable/ic_profile"
         android:title="">
     </item>
 
