--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,9 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="Profile"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:textColor="@color/black"
+                />
         </RelativeLayout>
 
         <!-- middle section -->
@@ -34,9 +36,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/rellayout2"
-            android:layout_below="@+id/rellayout1">
+            android:layout_below="@+id/rellayout1"
+            android:layout_above="@+id/botNavBar">
 
             <include layout = "@layout/layout_center_viewpager"/>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tvUserName"
+                        android:text="TESTING USERNAME"/>
+                        <!--android:layout_marginBottom=""/>-->
+                    <Button
+                        android:id="@+id/testerBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Test" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="LayoutParams are used by views to tell their parents how they want to be laid out. See ViewGroup Layout Attributes for a list of all child view attributes that this class supports.
+
+The base LayoutParams class just describes how big the view wants to be for both width and height. For each dimension, it can specify one of:
+
+    FILL_PARENT (renamed MATCH_PARENT in API Level 8 and higher), which means that the view wants to be as big as its parent (minus padding)
+    WRAP_CONTENT, which means that the view wants to be just big enough to enclose its content (plus padding)
+    an exact number
+
+There are subclasses of LayoutParams for different subclasses of ViewGroup. For example, AbsoluteLayout has its own subclass of LayoutParams which adds an X and Y value."
+                        android:textSize="36dp"/>
+
+                </LinearLayout>
+
+            </ScrollView>
         </RelativeLayout>
 
         <!-- bottom navigation -->
