--- a/app/src/main/res/layout/activity_choose_aflashcard.xml
+++ b/app/src/main/res/layout/activity_choose_aflashcard.xml
@@ -14,10 +14,20 @@
         <!-- top toolbar -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rellayout1">
-            <include layout = "@layout/layout_top_tabs"/>
+            android:layout_height="50dp"
+            android:id="@+id/rellayout1"
+            android:background="@color/top_blue">
 
+            <ImageView
+                android:id="@+id/backArrow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:src="@drawable/ic_back_arrow" />
         </RelativeLayout>
 
         <!-- middle section -->
@@ -41,28 +51,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.6" />
 
-            <TextView
-                android:id="@+id/textViewBackToMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Go Back to Menu"
-                app:layout_anchor="@+id/flashcardList"
-                app:layout_anchorGravity="right|top"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.969"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
 
         </RelativeLayout>
-
-        <!-- bottom navigation -->
-        <include layout = "@layout/layout_bottom_navigation_view"/>
 
     </RelativeLayout>
 
