--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#bfbfbf</color>
     <color name="white">#fff</color>
-    <color name="black">#000</color>
+    <color name="black">#000000</color>
+    <color name="dark_blue">#4257B4</color>
+    <color name="top_blue">#313DA3</color>
+
 </resources>
