--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,10 +14,9 @@
         <!-- top toolbar -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rellayout1">
-
-            <include layout="@layout/layout_top_tabs" />
+            android:layout_height="50dp"
+            android:id="@+id/rellayout1"
+            android:background="@color/top_blue">
 
             <TextView
                 android:id="@+id/textView6"
@@ -27,7 +26,7 @@
                 android:layout_centerVertical="true"
                 android:text="Profile"
                 android:textSize="30sp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
         </RelativeLayout>
 
@@ -55,7 +54,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:baselineAligned="false"
-                        android:background="@color/dark_blue">
+                        android:background="@color/white">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -64,7 +63,7 @@
                             android:text=" "
                             android:textSize="30dp"
                             android:gravity="center_vertical"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             />
                         <!--android:layout_marginBottom=""/>-->
                     </LinearLayout>
