--- a/app/src/main/res/layout/activity_search_flashcards.xml
+++ b/app/src/main/res/layout/activity_search_flashcards.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.along002.testingfinal.searchFlashcards"
+    tools:context="com.example.along002.testingfinal.TestingActivity"
     android:paddingTop="12dp"
     android:paddingBottom="20dp"
     android:scrollbarStyle="outsideOverlay">
