--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,15 +15,19 @@
             android:id="@+id/rellayout1"
             android:layout_alignParentTop="true"
             android:background="@color/top_blue">
-
-            <!--<EditText-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="80dp"-->
-                <!--android:hint="Search"-->
-                <!--android:textColor="@color/white"-->
-                <!--android:textColorHint="@color/white"-->
-                <!--/>-->
+            <EditText
+                android:id="@+id/searchEditText"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/backArrow"
+                android:textColor="@color/white"/>
+            <ImageView
+                android:id="@+id/imageViewSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/searchEditText"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_white_search"/>
             <ImageView
                 android:id="@+id/backArrow"
                 android:layout_width="wrap_content"
@@ -36,6 +40,7 @@
                 android:src="@drawable/ic_back_arrow" />
 
 
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -43,12 +48,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/relsearchlayout"
             android:layout_below="@id/rellayout1">
-            <android.support.v7.widget.SearchView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/searchView">
-
-            </android.support.v7.widget.SearchView>
 
         </RelativeLayout>
         <RelativeLayout
