--- a/app/src/main/res/layout/activity_view_flash_cards.xml
+++ b/app/src/main/res/layout/activity_view_flash_cards.xml
@@ -56,16 +56,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/testBtn"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginLeft="270dp"
+                android:layout_marginTop="40dp" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/deleteBtn"
-                android:layout_marginLeft="300dp"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginLeft="80dp"
+                android:layout_marginTop="40dp" />
 
             <TextView
                 android:id="@+id/textViewCreator"
@@ -73,7 +73,7 @@
                 android:layout_height="17dp"
                 android:layout_marginTop="350dp"
                 android:layout_centerHorizontal="true"
-                android:text="TextView" />
+                android:text="Creator" />
 
             <TextView
                 android:id="@+id/textViewName"
@@ -81,7 +81,7 @@
                 android:layout_height="20dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="250dp"
-                android:text="TextView" />
+                android:text="Name" />
 
             <TextView
                 android:id="@+id/textViewPrivacy"
@@ -89,7 +89,15 @@
                 android:layout_height="36dp"
                 android:layout_marginTop="300dp"
                 android:layout_centerHorizontal="true"
-                android:text="TextView" />
+                android:text="Privacy" />
+            <TextView
+                android:id="@+id/textViewTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewCreator"
+                android:layout_centerHorizontal="true"
+                android:text="Tags"
+                android:layout_marginTop="30dp"/>
 
             <Button
                 android:id="@+id/deleteBtn"
