--- a/app/src/main/res/layout/adapter_flashcard_view_layout.xml
+++ b/app/src/main/res/layout/adapter_flashcard_view_layout.xml
@@ -37,12 +37,27 @@
         android:src="@drawable/ic_gray_line"
 
     />
-
-    <TextView
-        android:id="@+id/set_Author"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:layout_weight="40"
-        android:text="Author Name"
-        android:textSize="18sp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/set_Author"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="Author Name"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/set_Tag"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/set_Author"
+            android:text="Tags"
+            android:textSize="18sp"
+            />
+
+    </LinearLayout>
+
+
 </LinearLayout>
