--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#000000</color>
     <color name="dark_blue">#4257B4</color>
     <color name="top_blue">#313DA3</color>
+    <color name="red">#FF0000</color>
 
 </resources>
