--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="dark_blue">#4257B4</color>
     <color name="top_blue">#313DA3</color>
     <color name="red">#FF0000</color>
+    <color name="green">#009900</color>
 
 </resources>
