--- a/app/src/main/res/layout/activity_manage_set.xml
+++ b/app/src/main/res/layout/activity_manage_set.xml
@@ -23,7 +23,7 @@ android:layout_height="match_parent">
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="Manage Sets"
+            android:text="Manage Set"
             android:textColor="@color/white"
             android:textSize="30sp" />
 
@@ -44,7 +44,8 @@ android:layout_height="match_parent">
         android:id="@+id/rellayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rellayout1">
+        android:layout_below="@+id/rellayout1"
+        android:layout_above="@+id/botNavBar">
 
 
         <include layout="@layout/layout_center_viewpager" />
