--- a/app/src/main/res/layout/layout_card_view.xml
+++ b/app/src/main/res/layout/layout_card_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp">
+    android:padding="10dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -11,6 +11,9 @@
         android:id="@+id/parent_layout">
 
         <android.support.v7.widget.CardView
+            android:elevation="3dp"
+            android:translationZ="3dp"
+            android:stateListAnimator="@null"
             android:layout_width="300dp"
             android:layout_marginLeft="30dp"
             android:layout_height="match_parent"
@@ -21,7 +24,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/black_border_card_view">
+                <RelativeLayout
+                    android:id="@+id/mid"
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:background="@color/black"
+                    android:layout_centerInParent="true">
 
+                </RelativeLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -33,10 +43,10 @@
                     android:id="@+id/card_Term"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/card_Def"
+                    android:layout_toRightOf="@+id/mid"
                     android:text="Term"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="100dp"/>
+                    android:layout_marginLeft="60dp"/>
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
