--- a/app/src/main/res/layout/layout_make_aset.xml
+++ b/app/src/main/res/layout/layout_make_aset.xml
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:padding="5dp">
+
+    <RelativeLayout
+        android:id="@+id/view_Background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/red">
+
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/deleteImage"
+            android:text="Delete"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            android:layout_marginRight="30dp"/>
+
+        <ImageView
+            android:id="@+id/deleteImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_delete"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="33dp"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -13,7 +40,9 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="5dp">
+            android:elevation="5dp"
+            android:translationZ="5dp"
+            android:stateListAnimator="@null">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -40,4 +69,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
