Update screen now correctly updates the set in the database. Checks are in place to check if a set is valid before pushing.

--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -81,8 +81,8 @@
                 android:id="@+id/deleteSetBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/button2"
-                android:layout_alignBottom="@+id/button2"
+                android:layout_alignBaseline="@+id/editSetBtn"
+                android:layout_alignBottom="@+id/editSetBtn"
                 android:layout_alignEnd="@+id/button4"
                 android:layout_alignRight="@+id/button4"
                 android:background="@drawable/black_border_card_view"
@@ -93,7 +93,7 @@
                 android:elevation="5dp"
                 android:translationZ="5dp"
                 android:stateListAnimator="@null"
-                android:id="@+id/button2"
+                android:id="@+id/editSetBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/textView8"
